Fix search bar alignment

--- a/src/style.css
+++ b/src/style.css
@@ -117,9 +117,9 @@ svg {
 /* Nav Section */
 
 nav {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  justify-content: space-between;
   padding-bottom: 44px;
 }
 
@@ -138,7 +138,6 @@ nav {
 }
 
 .logo-text > div:nth-child(2) {
-  /* font-weight: normal; */
   text-align: right;
   color: var(--colour-white-secondary);
   font-size: 20px;
@@ -189,6 +188,10 @@ nav > form > button > svg {
   background: none;
   outline: none;
   border: none;
+}
+
+.buttons {
+  text-align: end;
 }
 
 .buttons > * {
